# Models-From-Scratch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  python.ipynb  requirements.txt  setup.py
.github/workflows/: ci.yml
api/: main.py  routes.py  schemas.py
api/routes/: data_routes.py
api/services/: data_services.py
app/api/: main.py  routes.py  services.py
app/api/routes/: data_routes.py
app/frontend/: api.js  constants.js  fileHandling.js  index.html  model_selection.js  script.js
app/tests/: test_data_routes.py
benchmarks/tests/: test_linear_regression.py
benchmarks/tests/linear_regression/: test_linear_regression.py
benchmarks/tests/logistic_regression/: test_logistic_regression.py
docs/: index.html  styles.css
docs/js/: api.js  main.js  ui.js
src/MLFromScratch/classical/: __init__.py  classical_model.py  supervised_model.py  unsupervised_model.py
src/MLFromScratch/classical/base/abstract/: base_model.py  supervised_model.py  unsupervised_model.py
src/MLFromScratch/classical/base/mixin/: classification_mixin.py  regression_mixin.py
src/MLFromScratch/classical/base/model/: decision_tree_model_base.py  linear_model_base.py  (+1 more)
src/MLFromScratch/classical/decision_tree/: decision_tree.py  decision_tree_classification.py  decision_tree_regression.py
src/MLFromScratch/classical/k_nearest_neighbors/: k_nearest_neighbors_classification.py  k_nearest_neighbors_regression.py
src/MLFromScratch/classical/kmeans/: kmeans.py
src/MLFromScratch/classical/linear_regression/: README.md  linear_regression.py
src/MLFromScratch/classical/logistic_regression/: README.md  logistic_regression.py
src/MLFromScratch/classical/logistic_regression/c_backend/: CMakeLists.txt  logistic_regression.c  logistic_regression.h
src/MLFromScratch/classical/naive_bayes/: naive_bayes.py
src/MLFromScratch/classical/principal_component_analysis/: principal_component_analysis.py
src/MLFromScratch/classical/principal_component_analysis/cuda_backend/: CMakeLists.txt  principal_component_analysis.cu
src/MLFromScratch/classical/random_forest/: random_forest_classification.py  random_forest_regression.py
src/MLFromScratch/classical/support_vector_machine/: support_vector_machine.py
src/MLFromScratch/utils/c_utils/: CMakeLists.txt
src/MLFromScratch/utils/c_utils/c_loss_functions/: loss_functions.c  loss_functions.h
src/MLFromScratch/utils/c_utils/c_mathematical_functions/: activation.c  activation.h  inverse.c  loss.c
src/MLFromScratch/utils/c_utils/c_matrix_functions/: matrix_functions.c  matrix_functions.h
src/MLFromScratch/utils/c_utils/c_memory_functions/: memory_functions.c
src/MLFromScratch/utils/cuda_utils/: CMakeLists.txt
src/MLFromScratch/utils/cuda_utils/cuda_loss_functions/: loss_functions.cu  loss_functions.h
src/MLFromScratch/utils/cuda_utils/cuda_mathematical_functions/: activation.cu  activation.h  inverse.cu  inverse.h  loss.cu
src/MLFromScratch/utils/cuda_utils/cuda_matrix_functions/: matrix_functions.cu  matrix_functions.h
src/MLFromScratch/utils/cuda_utils/cuda_memory_functions/: memory_functions.cu
src/MLFromScratch/utils/python_utils/: activation_functions.py  loss_functions.py  matrix_functions.py
src/c_code/linear_regression/: CMakeLists.txt
src/c_code/logistic_regression/: logistic_regression.c
src/c_code/pca/: CMakeLists.txt  principal_component_analysis.h
src/classical/: __init__.py  classical_model.py
src/classical/linear_regression/: README.md  linear_regression.py
src/classical/linear_regression/c_backend/: CMakeLists.txt  Makefile  linear_regression.c  linear_regression.h
src/classical/linear_regression/cuda_backend/: CMakeLists.txt  linear_regression.cpp  linear_regression.cu  linear_regression.h  linear_regression_cuda.h
src/classical/linear_regression/py_interface/: linear_regression_base.py  linear_regression_c.py  linear_regression_cuda.py  linear_regression_python.py
src/classical/linear_regression/python/: linear_regression_python.py
src/cuda_code/linear_regression/: CMakeLists.txt
src/cuda_code/logistic_regression/: CMakeLists.txt  logistic_regression.cu
src/cuda_code/pca/: principal_component_analysis.cu  principal_component_analysis.h
src/tests/classical/: test_linear_regression.py
src/utils/c_utils/: CMakeLists.txt  c_utils.c  c_utils.h  pseudoinverse.c  pseudoinverse.h  pseudoinverse_c.h  utils.c  utils.h
src/utils/c_utils/c_loss_functions/: loss_functions.c  loss_functions.h
src/utils/c_utils/c_mathematical_functions/: inverse.c  inverse.h  pseudoinverse.c  pseudoinverse.h
src/utils/c_utils/c_matrix_functions/: matrix_functions.c
src/utils/c_utils/c_memory_functions/: memory_functions.c  memory_functions.h
src/utils/c_utils/matrix_functions/: matrix_functions.c  matrix_functions.h
src/utils/c_utils/memory_functions/: memory_functions.c  memory_functions.h
src/utils/cuda_utils/: CMakeLists.txt  cuda_utils.cu  cuda_utils.h  loss_functions.cu  memory_functions.cu  pseudoinverse.cpp  pseudoinverse_cuda.h
src/utils/cuda_utils/cuda_loss_functions/: loss_functions.cpp  loss_functions.cu  loss_functions.h
src/utils/cuda_utils/cuda_mathematical_functions/: inverse.cu  inverse.h  pseudoinverse.cu  pseudoinverse.h
src/utils/cuda_utils/cuda_matrix_functions/: matrix_functions.cu  matrix_functions.h
src/utils/cuda_utils/cuda_memory_functions/: memory_functions.cu
src/utils/cuda_utils/loss_functions/: loss_functions.cpp  loss_functions.cu  loss_functions_cuda.h
src/utils/cuda_utils/mathematical_functions/: pseudoinverse.cpp  pseudoinverse.cu  pseudoinverse_cuda.h
src/utils/cuda_utils/matrix_functions/: matrix_functions.cu  matrix_functions.h
src/utils/cuda_utils/memory_functions/: memory_functions.cu  memory_functions.h
tests/api/: test_routes.py
tests/classical/: test_linear_regression.py
tests/unit/classical/: test_decision_trees.py  test_k_nearest_neighbors.py  test_kmeans.py  test_linear_regression.py  test_logistic_regression.py  test_naive_bayes.py  test_principal_component_analysis.py  test_random_forest.py  test_support_vector_machine.py
(+36 files in other folders)
